fix: Cursor not showing in pc

--- a/styles/globals.css
+++ b/styles/globals.css
@@ -4,7 +4,6 @@ body {
   margin: 0;
   font-family: -apple-system, BlinkMacSystemFont, Segoe UI, Roboto, Oxygen,
     Ubuntu, Cantarell, Fira Sans, Droid Sans, Helvetica Neue, sans-serif, Formula;
-  cursor: none !important;
 }
 
 /* * {
@@ -63,10 +62,6 @@ a {
   text-decoration: none;
 }
 
-a:hover {
-  cursor: none;
-}
-
 * {
   box-sizing: border-box;
 }
@@ -105,4 +100,15 @@ a:hover {
     
     --list-item-font-size: 2rem;
   }
+}
+
+@media screen and (min-width: 1025px) {
+  :root {
+    cursor: none !important;
+  }
+    
+  a:hover {
+    cursor: none;
+  }
+
 }
